--- a/woorischool/Views/Parents/ModalViews/RegistedClassMainViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/RegistedClassMainViewController.xib
@@ -155,16 +155,19 @@
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="VVN-zW-HIp" secondAttribute="bottom" id="5FW-tg-LQE"/>
-                        <constraint firstItem="VVN-zW-HIp" firstAttribute="top" secondItem="iS2-G6-RQf" secondAttribute="top" id="8zm-HK-4Kj"/>
-                        <constraint firstItem="VVN-zW-HIp" firstAttribute="leading" secondItem="iS2-G6-RQf" secondAttribute="leading" id="K3t-Zw-HVb"/>
-                        <constraint firstItem="VVN-zW-HIp" firstAttribute="width" secondItem="iS2-G6-RQf" secondAttribute="width" id="YL8-d3-FZq"/>
-                        <constraint firstAttribute="trailing" secondItem="VVN-zW-HIp" secondAttribute="trailing" id="wmE-NP-Dfw"/>
+                        <constraint firstItem="VVN-zW-HIp" firstAttribute="leading" secondItem="HhW-M7-b76" secondAttribute="leading" id="75a-xW-czV"/>
+                        <constraint firstItem="VVN-zW-HIp" firstAttribute="trailing" secondItem="HhW-M7-b76" secondAttribute="trailing" id="DnW-2i-LZ1"/>
+                        <constraint firstItem="VVN-zW-HIp" firstAttribute="bottom" secondItem="HhW-M7-b76" secondAttribute="bottom" id="cup-mB-kFl"/>
+                        <constraint firstItem="VVN-zW-HIp" firstAttribute="centerX" secondItem="I7m-jS-nTZ" secondAttribute="centerX" id="fLT-PU-eHN"/>
+                        <constraint firstItem="VVN-zW-HIp" firstAttribute="top" secondItem="HhW-M7-b76" secondAttribute="top" id="fb6-f0-8og"/>
                     </constraints>
+                    <viewLayoutGuide key="contentLayoutGuide" id="HhW-M7-b76"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="I7m-jS-nTZ"/>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="VVN-zW-HIp" firstAttribute="width" secondItem="fnl-2z-Ty3" secondAttribute="width" id="3dm-HD-WRO"/>
                 <constraint firstItem="T5f-Wf-fQP" firstAttribute="top" secondItem="ePP-Ic-lq9" secondAttribute="bottom" id="44Z-Fa-LcJ"/>
                 <constraint firstItem="iS2-G6-RQf" firstAttribute="top" secondItem="T5f-Wf-fQP" secondAttribute="bottom" id="6rR-eT-ZWv"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="iS2-G6-RQf" secondAttribute="trailing" id="Sh6-zt-IGb"/>
