--- a/woorischool/Views/Parents/ModalViews/ParentsLoginViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsLoginViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -32,44 +32,42 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRe-rV-09L">
-                    <rect key="frame" x="30" y="143.5" width="169.5" height="49"/>
-                    <string key="text">안녕하세요 학부모님
-반갑습니다 </string>
-                    <fontDescription key="fontDescription" name="NanumSquareRoundR" family="NanumSquareRound" pointSize="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="안녕하세요 학부모님 :)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRe-rV-09L">
+                    <rect key="frame" x="30" y="73" width="169" height="22.5"/>
+                    <fontDescription key="fontDescription" name="NanumSquareRoundR" family="NanumSquareRound" pointSize="19"/>
                     <color key="textColor" name="greyishBrown"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xoi-fn-aFL" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                    <rect key="frame" x="30" y="272.5" width="354" height="95"/>
+                    <rect key="frame" x="30" y="125.5" width="315" height="95"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5a6-Qk-TdN">
-                            <rect key="frame" x="0.0" y="0.0" width="354" height="47"/>
+                            <rect key="frame" x="0.0" y="0.0" width="315" height="47"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="휴대폰 번호 (-없이 입력)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ybG-wM-VIS">
-                                    <rect key="frame" x="14" y="0.0" width="256" height="47"/>
+                                    <rect key="frame" x="14" y="0.0" width="217" height="47"/>
                                     <color key="textColor" name="greyishBrown"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="phonePad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                 </textField>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9z8-iO-2OQ" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
-                                    <rect key="frame" x="277" y="7" width="70" height="33"/>
+                                    <rect key="frame" x="238" y="7" width="70" height="33"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="70" id="5wa-bu-5VD"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                     <state key="normal" title="인증하기">
-                                        <color key="titleColor" name="brownGrey"/>
+                                        <color key="titleColor" name="softBlue"/>
                                     </state>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                             <real key="value" value="1"/>
                                         </userDefinedRuntimeAttribute>
                                         <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                            <color key="value" name="veryLightPink"/>
+                                            <color key="value" name="softBlue"/>
                                         </userDefinedRuntimeAttribute>
                                         <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
                                             <real key="value" value="3"/>
@@ -93,17 +91,17 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Sx-oB-ypG">
-                            <rect key="frame" x="0.0" y="47" width="354" height="1"/>
+                            <rect key="frame" x="0.0" y="47" width="315" height="1"/>
                             <color key="backgroundColor" name="veryLightPink"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="avz-Zy-8Sf"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vZw-oP-0st">
-                            <rect key="frame" x="0.0" y="48" width="354" height="47"/>
+                            <rect key="frame" x="0.0" y="48" width="315" height="47"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="인증번호 4자리" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nmZ-iH-NUD">
-                                    <rect key="frame" x="14" y="0.0" width="326" height="47"/>
+                                    <rect key="frame" x="14" y="0.0" width="287" height="47"/>
                                     <color key="textColor" name="greyishBrown"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
@@ -143,20 +141,20 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phoneCall" translatesAutoresizingMaskIntoConstraints="NO" id="pPG-Ab-0eJ">
-                    <rect key="frame" x="30" y="678" width="11" height="14"/>
+                    <rect key="frame" x="30" y="325.5" width="11" height="14"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="14" id="q22-fU-4eV"/>
                         <constraint firstAttribute="width" constant="11" id="w1B-ov-kk9"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문의센터 02 1234 1234 (평일 9시 - 18시 공휴일 제외)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dEM-fd-LVa">
-                    <rect key="frame" x="45" y="677.5" width="284.5" height="15.5"/>
+                    <rect key="frame" x="45" y="325" width="284.5" height="15.5"/>
                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
                     <color key="textColor" name="brownGrey"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OS1-EA-753" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
-                    <rect key="frame" x="30" y="703" width="354" height="47"/>
+                    <rect key="frame" x="30" y="270.5" width="315" height="47"/>
                     <color key="backgroundColor" name="greenishTeal"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="47" id="Y8C-FN-kuV"/>
@@ -174,35 +172,45 @@
                         <action selector="loginEvent" destination="-1" eventType="touchUpInside" id="5kW-hJ-ja7"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright Woorischool Corp. All rights Reserved" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7LA-R6-gO5">
-                    <rect key="frame" x="0.0" y="835" width="414" height="12"/>
-                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                    <color key="textColor" name="brownGrey"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="우리스쿨" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrU-8b-Tu5">
+                    <rect key="frame" x="30" y="40" width="83.5" height="28"/>
+                    <fontDescription key="fontDescription" name="NanumSquareRoundB" family="NanumSquareRound" pointSize="24"/>
+                    <color key="textColor" name="greenishTeal"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="우리스쿨" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrU-8b-Tu5">
-                    <rect key="frame" x="30" y="84" width="86.5" height="29.5"/>
-                    <fontDescription key="fontDescription" name="NanumSquareRoundB" family="NanumSquareRound" pointSize="25"/>
-                    <color key="textColor" name="greenishTeal"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginBackground" translatesAutoresizingMaskIntoConstraints="NO" id="iYl-aN-57L">
+                    <rect key="frame" x="0.0" y="533" width="375" height="134"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="iYl-aN-57L" secondAttribute="height" multiplier="375:134" id="IDm-QK-9UM"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright Woorischool Corp. All rights Reserved" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7LA-R6-gO5">
+                    <rect key="frame" x="0.0" y="640" width="375" height="12"/>
+                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
+                    <color key="textColor" name="brownGrey"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="7LA-R6-gO5" firstAttribute="top" secondItem="OS1-EA-753" secondAttribute="bottom" constant="85" id="698-cq-mvZ"/>
                 <constraint firstItem="wrU-8b-Tu5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="6Hm-6K-K05"/>
+                <constraint firstItem="iYl-aN-57L" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="C8z-yp-XJP"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="7LA-R6-gO5" secondAttribute="bottom" constant="15" id="Dk9-wo-UWe"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="OS1-EA-753" secondAttribute="trailing" constant="30" id="DkQ-C8-Dgf"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xoi-fn-aFL" secondAttribute="trailing" constant="30" id="F36-T5-wb8"/>
-                <constraint firstItem="OS1-EA-753" firstAttribute="top" secondItem="pPG-Ab-0eJ" secondAttribute="bottom" constant="11" id="HRV-us-IwO"/>
+                <constraint firstItem="OS1-EA-753" firstAttribute="top" secondItem="xoi-fn-aFL" secondAttribute="bottom" constant="50" id="FGk-bB-tVy"/>
+                <constraint firstItem="pPG-Ab-0eJ" firstAttribute="top" secondItem="OS1-EA-753" secondAttribute="bottom" constant="8" id="JfM-f0-MFw"/>
                 <constraint firstItem="dEM-fd-LVa" firstAttribute="centerY" secondItem="pPG-Ab-0eJ" secondAttribute="centerY" id="KWP-Nn-Zb0"/>
-                <constraint firstItem="LRe-rV-09L" firstAttribute="top" secondItem="wrU-8b-Tu5" secondAttribute="bottom" constant="30" id="KeH-0u-MpH"/>
+                <constraint firstItem="LRe-rV-09L" firstAttribute="top" secondItem="wrU-8b-Tu5" secondAttribute="bottom" constant="5" id="KeH-0u-MpH"/>
                 <constraint firstItem="wrU-8b-Tu5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="MUP-0s-Ozh"/>
                 <constraint firstItem="dEM-fd-LVa" firstAttribute="leading" secondItem="pPG-Ab-0eJ" secondAttribute="trailing" constant="4" id="OrH-Xn-jbD"/>
-                <constraint firstItem="xoi-fn-aFL" firstAttribute="top" secondItem="LRe-rV-09L" secondAttribute="bottom" constant="80" id="RQy-RV-gzf"/>
+                <constraint firstItem="xoi-fn-aFL" firstAttribute="top" secondItem="LRe-rV-09L" secondAttribute="bottom" constant="30" id="RQy-RV-gzf"/>
                 <constraint firstAttribute="trailing" secondItem="7LA-R6-gO5" secondAttribute="trailing" id="Rdg-pc-0xw"/>
+                <constraint firstItem="iYl-aN-57L" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="T2Q-EA-Wxx"/>
+                <constraint firstItem="iYl-aN-57L" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="V95-0s-5n4"/>
                 <constraint firstItem="LRe-rV-09L" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="ZLw-4O-ywD"/>
                 <constraint firstItem="xoi-fn-aFL" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="eX9-4Z-jyN"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="iYl-aN-57L" secondAttribute="trailing" id="frK-Hg-3OD"/>
                 <constraint firstItem="pPG-Ab-0eJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="hhz-3U-wzb"/>
                 <constraint firstItem="7LA-R6-gO5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="iZa-g2-EwX"/>
                 <constraint firstItem="OS1-EA-753" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="rl3-jb-ewn"/>
@@ -212,6 +220,7 @@
         </view>
     </objects>
     <resources>
+        <image name="loginBackground" width="375" height="134"/>
         <image name="phoneCall" width="11" height="14"/>
         <namedColor name="brownGrey">
             <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -221,6 +230,9 @@
         </namedColor>
         <namedColor name="greyishBrown">
             <color red="0.29019607843137257" green="0.29019607843137257" blue="0.29019607843137257" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="softBlue">
+            <color red="0.38039215686274508" green="0.67843137254901964" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="veryLightPink">
             <color red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
